# NPU-Examples

./: .gitignore  README.md  pyproject.toml
models/asr/whisper/: demo.ipynb
models/icl/mobilenet/: .gitignore  README.md  __main__.py  imagenet.py  pyproject.toml  workflow.json
models/llm/deepseek/: __init__.py  __main__.py  convert_onnx.py  deepseek_r1_distill.py  deepseek_r1_distill_qwen_1.5b.json  export.py  gen_calib_data.py  infer_qnpu.py  model.py  quant_qdq.py  sequence.py  util.py
models/llm/llama/: README.md  __init__.py  convert_onnx.py  environment.yml  export.py  infer_qnpu.py  main.py  model.py  pyproject.toml  quant_qdq.py  sequence.py  util.py
models/llm/llmlingua/: README.md  __main__.py  data.py  environment.yml  eval.py  export.py  model.py  prompt_compressor.py  pyproject.toml  qnpumodel.py  quant_qdq.py  smoke.py  user_script.py  workflow.json  workflow_encoder.json
models/llm/llmlingua/data/: contexts.npz  words.npz
models/mlm/bert/: README.md  bert_all.ps1  bert_common.py  bert_script.py  environment.yml  eval.py  google_bert_qdq_npu_squad.json  google_bert_qdq_npu_squad.py  intel_bert_qdq_npu_glue_mrpc.json  intel_bert_qdq_npu_glue_mrpc.py  llmlingua2_bert_qdq_npu_meetingbank.json  llmlingua2_bert_qdq_npu_meetingbank.py  pyproject.toml  qnpumodel.py
models/mlm/bert/data/: llmlingua2_bert_base_multilingual_cased_meetingbank_tokens.npz
scripts/: resolve_module.py
utils/: logger.py
