[tool.poetry]
name = "NPU-Examples"
version = "0.1.0"
description = ""
authors = ["Zheng Te <1221537+tezheng@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tezheng/NPU-Examples"
repository = "https://github.com/tezheng/NPU-Examples.git"
keywords = ["NPU", "Examples", "inference", "onnxruntime", "quantization"]
packages = [
    { include = "models", from = "." },
    { include = "utils", from = "." },
]


[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26.0"
onnxruntime-qnn = "^1.20.0"
onnx = "^1.17.0"
torch = "^2.5.0"
transformers = "^4.47.0"


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.0"
jupyterlab = "^4.3.4"
pytest = "^7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
