[tool.poetry]
name = "NPU-Examples[BERT]"
version = "0.1.0"
description = ""
authors = ["Zheng Te <1221537+tezheng@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tezheng/NPU-Examples"
repository = "https://github.com/tezheng/NPU-Examples.git"
keywords = ["NPU", "Examples", "inference", "onnxruntime", "quantization"]
package-mode = false


[tool.poetry.dependencies]
python = "~3.11"
numpy = "~1.26.0"
datasets = "~3.2.0"
evaluate = "~0.4.0"
huggingface-hub = "~0.27.0"
olive-ai = "~0.7.0"
onnxruntime-qnn = "~1.20.0"
onnx = "1.17.0"
optuna = "~4.2.0"
optimum = "~1.23.0"
scikit-learn = "~1.5.0"
scipy = "~1.15.0"
tabulate = "~0.9.0"
tokenizers = "~0.21.0"
torch = "~2.5.0"
torchmetrics = "~1.6.0"
tqdm = "~4.67.0"
transformers = "~4.47.0"


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.0"
jupyterlab = "^4.3.0"
matplotlib = "^3.10.0"
pytest = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
